objects/HAPI_Price_Load__c.object
<CustomObject>
    <fields>
        <fullName>Account_Group_Name__c</fullName>
        <label>Account Group Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>OSM Currency</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Fully_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Fully Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Partially_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Partially Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_Price__c</fullName>
        <label>Distributor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PriceList_Name__c</fullName>
        <label>PriceList Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Selection_Method__c</fullName>
        <label>Price Selection Method</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <label>Product SKU</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Length__c</fullName>
        <label>Subscription Length</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>HAPI Price Load</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Version__c</columns>
        <columns>NAME</columns>
        <columns>Product_SKU__c</columns>
        <columns>Data_Fully_Uploaded__c</columns>
        <columns>Message__c</columns>
        <columns>Data_Partially_Uploaded__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Account_Group_Name__c</columns>
        <columns>PriceList_Name__c</columns>
        <columns>Price__c</columns>
        <columns>Subscription_Product__c</columns>
        <columns>Subscription_Length__c</columns>
        <columns>Billing_Frequency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>KE100</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Version_Filter</fullName>
        <columns>Version__c</columns>
        <columns>NAME</columns>
        <columns>Product_SKU__c</columns>
        <columns>Data_Fully_Uploaded__c</columns>
        <columns>Data_Partially_Uploaded__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>JB_Q421</value>
        </filters>
        <label>Version Filter</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HAPI-PRICE-{0000000000}</displayFormat>
        <label>HAPI Price Load Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAPI Price Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>